<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qiba.CompassActivity">

    <include
        layout="@layout/toolbar_insidepage_back"
        />

    <RelativeLayout
        android:id="@+id/rel_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="@dimen/margin_top_min">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/compassLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_location"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:textColor="@color/gray_quran" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/compassangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_location"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/location_text_line2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    android:textColor="@color/gray"
                    android:textSize="50sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/noLocationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/noLocationText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:lines="5"
                    android:textColor="@color/gray"
                    android:textSize="24sp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/qiblaFrameLayout"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@drawable/backghotbnama1"
                android:gravity="center"
                android:orientation="vertical">


                <FrameLayout
                    android:id="@+id/qiblaLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView

                        android:id="@+id/frameImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/compassImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/arrowImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/lineghotbnama" />
                </FrameLayout>
            </RelativeLayout>





        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_direction_holly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_right_min"
            android:textColor="@color/color_primary_dark_quran"
            android:text="@string/direction_holly" />

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_bookmark"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:checkedButton="@+id/offer"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdo_medina"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background_left"
                android:button="@null"
                android:gravity="center"
                android:text="@string/medina"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rdo_mecca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/mecca"
                android:textColor="@color/black" />


            <RadioButton
                android:id="@+id/rdo_najaf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/najaf"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rdo_karbala"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/karbala"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rdo_mashad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background_right"
                android:button="@null"
                android:gravity="center"
                android:text="@string/mashad"
                android:textColor="@color/black" />

        </RadioGroup>


    </LinearLayout>



</RelativeLayout>